@@ -14,7 +14,6 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import org.sosy_lab.cpachecker.cfa.ast.c.CExpression;
@@ -42,7 +41,7 @@ public class ExternModelLoader {
     assert (!parameters.isEmpty()) : "No external model given!";
     // the parameter comes in C syntax (with ")
     String filename = parameters.get(0).toASTString().replaceAll("\"", "");
-    Path modelFile = Paths.get(filename);
+    Path modelFile = Path.of(filename);
     return loadExternalFormula(modelFile, ssa);
   }
 
